add images + style.css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
 <meta charset="utf-8">
 <title>Super Cars</title>
@@ -7,12 +8,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-
 fit=no">
 <link rel="stylesheet" href="./assets/vendors/fontawesome/css/all.min.css">
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
     <header>
-        <h1>Super Cars</h1>
         <nav>
-
+            <ul>
+            <li>Super<span style="color: #ff0000">Cars</span></li>
+            <li1>Véhicules</li1>
+            <li1>Offres et financement</li1>
+            <li1>Equipe</li1>
+            <li1>Contact</li1>
+            </ul>
         </nav>
     </header>
     <main>
