--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ fit=no">
 
 <body>
     <header>
+        
         <nav>
             <ul>
             <li>Super<span style="color: #ff0000">Cars</span></li>
@@ -22,12 +23,15 @@ fit=no">
             <li1>Contact</li1>
             </ul>
         </nav>
+
     </header>
+
     <main>
         <article>
             <header>
-                <h1>Titre de l'article</h1>
-                <i class="fab fa-apple-pay"></i>
+                <h1>Super<span style="color: #ff0000">Cars</span></h1>
+                <h2>Concession de Saint-Nazaire</h2>
+                <h5>Vous retrouverez chez nous tous les vehicules de la marque SuperCars entièrement personnalisables.</h5>
             </header>
             <div>
 
